# mestv

./: data.json  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
houses/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
houses/migrations/: 0001_initial.py  0002_alter_housephoto_photo.py  0002_news.py  0003_alter_house_description_alter_news_description.py  0003_headersection_headertext.py  0004_alter_news_description.py  0004_headertext_is_active.py  0005_aboutsection_alter_headersection_options_and_more.py  0006_alter_housephoto_options.py  0007_alter_aboutsection_description_and_more.py  0008_delete_aboutsection_delete_headersection_and_more.py  0009_remove_house_style.py  0010_alter_headertext_options.py  0011_contactinfo_alter_headertext_title.py
houses/templatetags/: custom_filters.py
houses/utils/: file_path.py
mestv/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: grid-gallery.css  ollie.css
static/js/: ollie.js
static/scss/abstracts/: _variables.scss
static/scss/layout/: _header.scss
static/vendors/owl-carousel/css/: owl.theme.default.css  owl.theme.green.css
templates/: base.html  components.html  index.html  main.html
templates/houses/: house_detail.html  house_list.html  interior_gallery.html  news_list.html
templates/includes/: footer.html  header.html  inc_footer.html  inc_header.html  inc_nav_main_menu.html  navmenu.html  navmenu_main.html  scroll_button.html  socialmedia.html
